app components. currently working on header and main section

--- a/src/components/header/components/navbar/navbar.css
+++ b/src/components/header/components/navbar/navbar.css
@@ -1,16 +1,37 @@
 .navbar {
+    /* position: sticky;
+    top: 0; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 3.5vw;
+    align-items: center;
+    margin: 3vw 8vw;
 }
 .navbar__item {
-    padding: 2vw;
-    color: white;
+    margin: 0vw 2vw;
+    color: rgb(0, 0, 0);
     text-decoration: none;
-    font-family: 'Quicksand', sans-serif;
-    font-size: 110%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+    font-size: 115%;
+    transition: 0.3s;
 }
-/* .navbar__item--logo {
-    padding-left: 0;
-} */
+.navbar__item:hover:not(.navbar__item--logo) {
+    color: rgb(228, 183, 68);
+}
+.navbar__item--logo {
+    font-weight: bold;
+    font-size: 165%;
+}
+.navbar__item--contact {
+    color: white;
+    border: 1px solid transparent;
+    padding: 0.65vw 1.5vw;
+    background-color: rgb(197, 159, 61);
+    transition: 0.5s;
+}
+.navbar__item--contact:hover {
+    color: rgb(228, 183, 68);
+    border: 1px solid rgb(228, 183, 68);
+    background: transparent;
+}
