--- a/src/components/footer/components/copyright/copyright.css
+++ b/src/components/footer/components/copyright/copyright.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column; 
     justify-content: space-between;
-    text-align: right;
-    font-family: 'Helvetica Neue', sans-serif;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
     font-size: 110%;
+    margin: 3vw 0vw 0vw 0vw;
+    line-height: 1.5rem;
 }
