--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,15 +2,41 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-image: url("https://images.pexels.com/photos/271667/pexels-photo-271667.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    background-image: url("https://images.pexels.com/photos/1216544/pexels-photo-1216544.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    background-position: center;
     background-size: cover;
-    background-position: top;
     width: 100vw;
-    height: 70vh;
+    height: 80vh;
 }
 .header__overlay {
     position: absolute;
-    background-color: rgba(240, 240, 240, 0.9);
     width: 100vw;
-    height: 70vh;
+    height: 80vh;
+    background-color: rgba(26, 30, 40, 0.8);
+}
+@media screen and (max-width: 576px) {
+    .about__text {
+        font-size: 1.7rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .about__text {
+        font-size: 1.85rem;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .about__text {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .about__text {
+        font-size: 2.15rem;
+    }
+    .about {
+        margin: 10vw 5vw;
+    }
 }
