--- a/src/components/main/components/features/features.css
+++ b/src/components/main/components/features/features.css
@@ -1,27 +1,30 @@
 .features {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    padding: 7.5vw;
-    background-color: rgb(250, 250, 250);
-    width: 100vw;
+    transform: translate(0%, -50%);
 }
 .features__card {
-    margin: 0;
-    width: 25vw;
+    position: relative;
+    background-color: rgb(197, 159, 61);
+    width: 22.5vw;
     height: auto;
-    padding: 2vw 4vw;
-    color: rgb(75, 60, 25);
+    margin: 1.5vw;
+    padding: 2.5vw 4vw;
+    color: rgb(255, 255, 255);
     font-family: 'Roboto', sans-serif;
-    font-size: 120%;
+    font-size: 115%;
+    text-align: center;
 }
-@media screen and (max-width: 1200px) {
+
+@media screen and (max-width: 768px) {
     .features {
         flex-direction: column;
+        transform: none;
     }
     .features__card {
-        margin: 5vw;
-        width: auto;
-        padding: 7.5vw;
+        margin: 0;
+        width: 100vw;
+        padding: 7.5vw 10vw;
+        font-size: 110%;
     }
 }
