--- a/src/components/main/components/features/features.css
+++ b/src/components/main/components/features/features.css
@@ -2,13 +2,15 @@
     display: flex;
     flex-direction: row;
     transform: translate(0%, -50%);
+    margin: 0;
+    padding: 0;
 }
 .features__card {
     position: relative;
     background-color: rgb(197, 159, 61);
-    width: 22.5vw;
+    width: 25vw;
     height: auto;
-    margin: 1.5vw;
+    margin: 2vw;
     padding: 2.5vw 4vw;
     color: rgb(255, 255, 255);
     font-family: 'Roboto', sans-serif;
@@ -16,15 +18,3 @@
     text-align: center;
 }
 
-@media screen and (max-width: 768px) {
-    .features {
-        flex-direction: column;
-        transform: none;
-    }
-    .features__card {
-        margin: 0;
-        width: 100vw;
-        padding: 7.5vw 10vw;
-        font-size: 110%;
-    }
-}
