--- a/src/components/header/components/navbar/navbar.css
+++ b/src/components/header/components/navbar/navbar.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 3.5vw 4vw;
+    margin: 3.5vw;
 }
 .navbar__menu {
     display: flex;
@@ -30,12 +30,12 @@
 }
 .navbar__item--logo {
     font-weight: bold;
-    font-size: 150%;
+    font-size: 145%;
 }
 .navbar__item--contact {
     color: white;
     border: 1px solid transparent;
-    padding: 0.65vw 1.5vw;
+    padding: 0.75vw 1.5vw;
     background-color: rgb(197, 159, 61);
     transition: 0.5s;
 }
@@ -43,32 +43,4 @@
     color: rgb(197, 159, 61);
     border: 1px solid rgb(197, 159, 61);
     background: transparent;
-}
-@media screen and (max-width: 1200px) {
-    .navbar__item:not(.navbar__item--logo) {
-        display: none;
-    }
-    .navbar__item--logo {
-        font-size: 150%;
-    }
-    .navbar {
-        margin: 6vw 7.5vw 0vw 6vw;
-    }
-}
-@media screen and (max-width: 576px) {
-    .about__text {
-        font-size: 1.7rem;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .about__text {
-        font-size: 1.85rem;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .about__text {
-        font-size: 2rem;
-    }
 }
