--- a/src/components/header/components/title/title.css
+++ b/src/components/header/components/title/title.css
@@ -1,28 +1,24 @@
-.header__title {
-    font-size: 400%;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bolder;
-    color: white;
-    margin: 0;
-}
 .header__about {
-    width: 100vw;
-    height: 50vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+.header__title {
+    font-size: 345%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: white;
+    margin: 0;
+}
 .header__subtitle {
     font-family: 'Roboto', sans-serif;
     color: white;
     font-size: 115%;
-}
-@media screen and (max-width: 576px) {
-    .header__title {
-        font-size: 240%;
-    }
-    .header__about {
-        height: 70vh;
-    }
+    margin-bottom: 0%;
 }
