--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-image: url("https://images.pexels.com/photos/1216544/pexels-photo-1216544.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    background-image: url("../../assets/img/header_background.jpeg");
     background-position: center;
     background-size: cover;
     width: 100vw;
