--- a/src/components/main/components/renovations/renovations.css
+++ b/src/components/main/components/renovations/renovations.css
@@ -1,15 +1,15 @@
 .renovations {
     display: flex;
     flex-direction: column;
-    margin: 0;
-    padding: 5vw 7.5vw 10vw 7.5vw;
+    padding: 10vw 7.5vw 10vw 7.5vw;
     width: 100vw;
     background-color: rgb(245, 245, 245);
 }
 .renovations__title {
-    text-align: left;
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
+    color: rgb(26, 30, 40);
+    margin: 0;
 }
 .renovations__gallery {
     display: flex;
@@ -20,12 +20,13 @@
     list-style-type: none;
 }
 .renovations__gallery--image img {
-    padding-top: 2vw;
-    width: 18vw;
-    opacity: 0.75;
+    margin-top: 3vw;
+    width: 17.5vw;
+    opacity: 0.8;
     transition: 0.5s;
+    box-shadow: 1em 1em 0em rgb(197, 159, 61);
 }
 .renovations__gallery--image img:hover {
-    opacity: 1;
     cursor: pointer;
+    box-shadow: none;
 }
