--- a/src/components/main/components/renovations/renovations.css
+++ b/src/components/main/components/renovations/renovations.css
@@ -1,15 +1,15 @@
 .renovations {
     display: flex;
     flex-direction: column;
-    padding: 10vw 7.5vw 10vw 7.5vw;
+    padding: 10vw 6vw 10vw 6vw;
     width: 100vw;
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(255, 255, 255);
 }
 .renovations__title {
-    font-family: 'Roboto', sans-serif;
     font-weight: normal;
     color: rgb(26, 30, 40);
-    margin: 0;
+    font-size: 160%;
+    margin-top: 0;
 }
 .renovations__gallery {
     display: flex;
@@ -20,13 +20,24 @@
     list-style-type: none;
 }
 .renovations__gallery--image img {
-    margin-top: 3vw;
-    width: 17.5vw;
+    width: 25vw;
     opacity: 0.8;
     transition: 0.5s;
-    box-shadow: 1em 1em 0em rgb(197, 159, 61);
 }
 .renovations__gallery--image img:hover {
     cursor: pointer;
-    box-shadow: none;
+    opacity: 1;
+}
+.renovations__gallery--text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 25vw;
+    color:rgb(26, 30, 40);
+    text-align: left;
+}
+.renovations__gallery--text p {
+    margin: 0;
+    font-size: 110%;
 }
