--- a/src/components/footer/components/copyright/copyright.css
+++ b/src/components/footer/components/copyright/copyright.css
@@ -1,10 +1,21 @@
 .copyright {
+    /* position: absolute;
+    bottom: 0;
+    left: 0; */
+    margin: 0;
     display: flex;
-    flex-direction: column; 
+    flex-direction: row;
     justify-content: space-between;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
+    background-color:rgb(26, 30, 40);
+    padding: 0;
+    padding: 0vw 6vw 3vw 6vw;
+}
+.copyright__text {
+    margin: 0;
+    color: rgb(150, 150, 150);
     font-size: 110%;
-    margin: 3vw 0vw 0vw 0vw;
-    line-height: 1.5rem;
+}
+.copyright__text a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
