--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,9 +2,26 @@
     display: flex;
     flex-direction: column;
     background-color: rgb(26, 30, 40);
-    color: #f5f5f5;
-    width: 100vw;
-    height: auto;
+    color: rgb(255, 255, 255);
     margin: 0;
-    padding: 5em 10em;
+    padding: 0;
+}
+.footer__content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 7.5vw 5vw;
+    width: 100%;
+}
+.footer__content--form {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
+.footer__content--info {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
 }
