--- a/src/components/header/components/navbar/navbar.css
+++ b/src/components/header/components/navbar/navbar.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 4vw;
+    margin: 4vw 6vw;
 }
 .navbar__menu {
     display: flex;
@@ -14,13 +14,18 @@
     background-color: transparent;
     border: 0;
     margin: 0vw 2vw;
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
     font-weight: normal;
     font-size: 115%;
     cursor: pointer;
     transition: 0.5s;
+}
+.navbar__item--logo {
+    margin-left: 0;
+}
+.navbar__item--contact {
+    margin-right: 0;
 }
 .navbar__item:focus {
     outline: none;
@@ -30,10 +35,10 @@
 }
 .navbar__item--logo {
     font-weight: bold;
-    font-size: 172.5%;
+    font-size: 160%;
 }
 .navbar__item--contact {
-    color: white;
+    color: rgb(255, 255, 255);
     border: 1px solid transparent;
     padding: 0.75vw 1.5vw;
     background-color: rgb(197, 159, 61);
