--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -2,4 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+    background-color: rgb(245, 245, 245);
 }
